--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -83,8 +83,8 @@
                         <mahapps:MetroTabItem Header="{x:Static p:Strings.menu_mobile}">
                             <StackPanel Orientation="Vertical">
                                 <CheckBox Content="{x:Static p:Strings.menu_mobileappenabled}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=mobileAppEnabled}"/>
-                                <TextBlock Text="{x:Static p:Strings.inputtitle_mobileip}" FontSize="20" FontWeight="Bold"/>
-                                <TextBox Text="{Binding Source={x:Static properties:Settings.Default},Path=phoneIpAddress}"/>
+                                <!--<TextBlock Text="{x:Static p:Strings.inputtitle_mobileip}" FontSize="20" FontWeight="Bold"/>
+                                <TextBox Text="{Binding Source={x:Static properties:Settings.Default},Path=phoneIpAddress}"/>-->
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="{x:Static p:Strings.inputtitle_telegramid}" FontSize="20" FontWeight="Bold" HorizontalAlignment="Left"/>
                                     <Button Content="{x:Static p:Strings.inputtext_botlinkbutton}" Click="BotButton_Click" Margin="20,0,0,0"/>
@@ -373,6 +373,42 @@
                         </StackPanel>
                         <Button Content="{x:Static p:Strings.button_apply}" VerticalAlignment="Bottom" Click="ApplyBuyItemButton_Click"/>
                     </Grid>
+                </Grid>
+            </mahapps:MetroTabItem>
+            <mahapps:MetroTabItem>
+                <TabItem.HeaderTemplate>
+                    <ItemContainerTemplate>
+                        <StackPanel Orientation="Horizontal">
+                            <Viewbox Width="21" Height="21" Stretch="Fill">
+                                <Path Fill="{DynamicResource MahApps.Brushes.Accent}" Data="{StaticResource ServerBadge}" RenderTransformOrigin="0.5,0.5" >
+                                    <Path.RenderTransform>
+                                        <TransformGroup>
+                                            <ScaleTransform/>
+                                            <SkewTransform/>
+                                            <RotateTransform/>
+                                            <TranslateTransform X="-4.5"/>
+                                        </TransformGroup>
+                                    </Path.RenderTransform>
+                                </Path>
+                            </Viewbox>
+                            <TextBlock Text="{x:Static p:Strings.menu_server}" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="5,0,0,0"></TextBlock>
+                        </StackPanel>
+                    </ItemContainerTemplate>
+                </TabItem.HeaderTemplate>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <StackPanel Grid.Row="0" Orientation="Vertical">
+                        <TextBlock x:Name="ServerIP" Text="IP: {}"/>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{x:Static p:Strings.title_serverport}" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <mahapps:NumericUpDown Value="{Binding Source={x:Static properties:Settings.Default},Path=serverPort}"/>
+                        </StackPanel>
+                        <TextBlock Text="{x:Static p:Strings.title_serverclients}"/>
+                    </StackPanel>
+                    <ListBox Grid.Row="1" x:Name="ClientsListBox"/>
                 </Grid>
             </mahapps:MetroTabItem>
         </TabControl>
