--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -76,6 +76,7 @@
                                 </StackPanel>
                                 <CheckBox Content="{x:Static p:Strings.menu_autocheckforupdates}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCheckForUpdates}"/>
                                 <CheckBox Content="{x:Static p:Strings.ckbox_oldscreencapture}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=oldScreenCaptureWay}"/>
+                                <CheckBox Content="{x:Static p:Strings.ckbox_oldmouseinput}" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=oldMouseInput}"/>
                                 <TextBlock Text="{x:Static p:Strings.menu_language}" FontSize="20" FontWeight="Bold"/>
                                 <StackPanel x:Name="languagesStackPanel" Orientation="Vertical"/>
                             </StackPanel>
