fix(gui): added grid to auto buy so that the buttons wont be behind the image fix(updater): made window non resizable feat(updater): added common controls to manifest

--- a/src/Updater/MainWindow.xaml
+++ b/src/Updater/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Updater"
         mc:Ignorable="d"
-        Title="CSAuto updater" Height="80" Width="300">
+        Title="CSAuto updater" Height="80" Width="300" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
