--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -353,18 +353,22 @@
                     </ItemContainerTemplate>
                 </TabItem.HeaderTemplate>
                 <Grid>
-                    <StackPanel x:Name="AutoBuySettingsStack" Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <StackPanel Grid.Column="0" x:Name="AutoBuySettingsStack" Orientation="Vertical" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,10,0,0">
                         <CheckBox Content="{x:Static p:Strings.text_enabled}" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoBuyEnabled}" VerticalAlignment="Top" HorizontalAlignment="Left"/>
                         <CheckBox Content="{x:Static p:Strings.title_rebuy}" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoBuyRebuy}" VerticalAlignment="Top" HorizontalAlignment="Left"/>
                     </StackPanel>
-                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
+                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
                         <TabControl Panel.ZIndex="1" x:Name="AutoBuyTab" VerticalAlignment="Top" SelectionChanged="AutoBuyTab_SelectionChanged" mahapps:TabControlHelper.Underlined="SelectedTabItem" mahapps:TabControlHelper.UnderlinePlacement="Bottom" Height="48">
                             <mahapps:MetroTabItem Header="{x:Static p:Strings.team_ct}"/>
                             <mahapps:MetroTabItem Header="{x:Static p:Strings.team_t}"/>
                         </TabControl>
                     </StackPanel>
-                    <Image Panel.ZIndex="0" x:Name="AutoBuyImage" MouseDown="AutoBuyImage_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,48,0,0"/>
-                    <Grid x:Name="BuyItemProperties" Visibility="Hidden">
+                    <Image Grid.Column="1" Panel.ZIndex="0" x:Name="AutoBuyImage" MouseDown="AutoBuyImage_MouseDown" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,48,0,0"/>
+                    <Grid Grid.Column="0" Grid.ColumnSpan="2" x:Name="BuyItemProperties" Visibility="Hidden">
                         <StackPanel>
                             <TextBlock x:Name="BuyItemName" Text="Name"></TextBlock>
                             <CheckBox  x:Name="BuyItemEnabledCheckBox" Content="{x:Static p:Strings.text_enabled}"></CheckBox>
