--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -214,21 +214,22 @@
                                 <MenuItem x:Name="SaveFile" Header="_Save" Click="SaveFile_Click"/>
                             </MenuItem>
                             <MenuItem Header="_Debug settings" Click="DebugSettings_Click"/>
+                            <MenuItem Header="Debug _info" Click="DebugInfo_Click"/>
                         </Menu>
                     </DockPanel>
-                    <TextBlock x:Name="IsPortableText" Text="Portable: {}" Grid.Row="1" Grid.Column="2"  VerticalAlignment="Bottom" Margin="0,0,0,30"/>
+                    <!--<TextBlock x:Name="IsPortableText" Text="Portable: {}" Grid.Row="1" Grid.Column="2"  VerticalAlignment="Bottom" Margin="0,0,0,30"/>-->
                     <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom"/>
-                    <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto"/>
+                    <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" Grid.ColumnSpan="2" VerticalScrollBarVisibility="Auto"/>
                     <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto" TextChanged="debugBox_TextChanged" Loaded="debugBox_Loaded"/>
                     <!--<TextBlock Text="CS Console Output:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/> -->
-                    <TextBlock Text="{Binding Source={x:Static csauto:DiscordRPCButtonSerializer.Path}}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Margin="0,0,0,15" TextWrapping="WrapWithOverflow"/>
-                    <TextBlock Text="" x:Name="OldCaptureText" Grid.Row="1" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,15"/>
-                    <TextBlock x:Name="DebugButtonColor" Text="Active: {color}, Regular: {color}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom"/>
+                    <!--<TextBlock Text="{Binding Source={x:Static csauto:DiscordRPCButtonSerializer.Path}}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom" Margin="0,0,0,15" TextWrapping="WrapWithOverflow"/>-->
+                    <!--<TextBlock Text="" x:Name="OldCaptureText" Grid.Row="1" Grid.Column="0" VerticalAlignment="Bottom" Margin="0,0,0,15"/>-->
+                    <!--<TextBlock x:Name="DebugButtonColor" Text="Active: {color}, Regular: {color}" Grid.Row="1" Grid.Column="1" VerticalAlignment="Bottom"/>-->
                     <TextBlock x:Name="DebugPixelColor" Text="Pixel Color at (x,y): res" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="0,0,0,15"/>
-                    <TextBlock Text="Latest Captured Frame:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom"/>
+                    <TextBlock Text="Latest Captured Frame:" Grid.Row="1" Grid.Column="2" VerticalAlignment="Bottom" Margin="0,0,15,0"/>
                     <Image Grid.Row="2" Grid.RowSpan="1" Grid.Column="2" x:Name="latestCapturedFrame"/>
                     <TextBox x:Name="csConsoleOutput" IsReadOnly="True" Grid.Row="2" Grid.RowSpan="2" Grid.Column="2" VerticalScrollBarVisibility="Auto" Visibility="Hidden"/>
-                    <TextBlock x:Name="steamInfo" Text="SteamID3 : none LaunchOptions ''" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" FontSize="12" TextWrapping="Wrap" Margin="0,0,10,30"/>
+                    <!--<TextBlock x:Name="steamInfo" Text="SteamID3 : none LaunchOptions ''" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="3" HorizontalAlignment="Left" FontSize="12" TextWrapping="Wrap" Margin="0,0,10,30"/>-->
                 </Grid>
             </mahapps:MetroTabItem>
             <mahapps:MetroTabItem >
